--- a/xyz/xyz/xyz.csproj
+++ b/xyz/xyz/xyz.csproj
@@ -16,13 +16,16 @@
 		<TrimMode>link</TrimMode>
 		<Description>XYZ encryptor. Made by ivnktrv. My github - https://github.com/ivnktrv</Description>
 		<Copyright>Made by ivnktrv</Copyright>
-		<Version>1.2.0</Version>
+		<Version>1.3.0</Version>
 		<Authors>ivnktrv</Authors>
 		<Title>XYZ Encryptor</Title>
+		<AssemblyVersion>1.3.0</AssemblyVersion>
+		<FileVersion>1.3.0</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\xyz_encryptor\xyz_encryptor\xyz_cryptor.csproj" />
+	  <ProjectReference Include="..\xyz_cryptor\xyz_cryptor.csproj" />
+	  <ProjectReference Include="..\xyz_keygen\xyz_keygen.csproj" />
 	</ItemGroup>
 
 
