--- a/xyz/xyz.csproj
+++ b/xyz/xyz.csproj
@@ -14,13 +14,13 @@
 		<PublishReadyToRun>true</PublishReadyToRun>
 		<PublishTrimmed>true</PublishTrimmed>
 		<TrimMode>link</TrimMode>
-		<Description>Made by ivnktrv. My github - https://github.com/ivnktrv</Description>
+		<Description></Description>
 		<Copyright>Made by ivnktrv</Copyright>
-		<Version>1.3.0</Version>
+		<Version>1.3.1</Version>
 		<Authors>ivnktrv</Authors>
 		<Title>XYZ Encryptor</Title>
-		<AssemblyVersion>1.3.0</AssemblyVersion>
-		<FileVersion>1.3.0</FileVersion>
+		<AssemblyVersion>1.3.1</AssemblyVersion>
+		<FileVersion>1.3.1</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
